--- a/src/app/pages/messages/messages.component.scss
+++ b/src/app/pages/messages/messages.component.scss
@@ -11,10 +11,6 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-
-  @media (max-width: 599px) {
-    padding-bottom: calc(60px + env(safe-area-inset-bottom, 0px));
-  }
 }
 
 .messages-left {
@@ -63,6 +59,10 @@
   flex: 1;
   /* takes remaining space */
   overflow-y: auto;
+
+  @media (max-width: 599px) {
+    padding-bottom: calc(100px + env(safe-area-inset-bottom, 0px));
+  }
 }
 
 .empty-chats {
@@ -179,6 +179,10 @@
   /* enable scrolling if needed */
   padding: 0 0.4rem;
   min-height: 0;
+
+  @media (max-width: 599px) {
+    padding-bottom: calc(100px + env(safe-area-inset-bottom, 0px));
+  }
 }
 
 .message-input-container {
